<resources>
    <string name="app_name">First Degree</string>
    <string name="title_app">First Degree</string>
    <string name="title_coefficient_a">Coefficient a:</string>
    <string name="title_coefficient_b">Coefficient b:</string>
    <string name="title_solution">Solution</string>
    <string name="title_next">Next</string>
    <string name="title_exit">Exit</string>
    <string name="title_result">Result:</string>
    <string name="title_infinition">Infinite solutions</string>
    <string name="title_nosolution">No solution</string>
    <string name="title_select_language">Select Language:</string>
    <string-array name="title_languages">
        <item>English</item>
        <item>Vietnamese</item>
        <item>French</item>
        <item>Spanish</item>
    </string-array>
</resources>
